--- a/CSS-FORM.html
+++ b/CSS-FORM.html
@@ -9,44 +9,24 @@
 </head>
 <body>
   <a href="index.html"><h1>HOME</h1></a>
-  <h4>FORM表单</h4>
-  <div class="code">
-    <div>
-      &lt;form action="example.com/path" method="post">
-    </div>
 
-    <div class="indent1">&lt;div></div>
-    <div class="indent2">
-      &lt;label for="first_name">First Name:&lt;/label>
-    </div>
-    <div class="indent2">
-      &lt;input type="text" name="first_name" id="first_name" placeholder="Bob...">
-    </div>
-    <div class="indent1">&lt;/div></div>
-    <br>
-    <div class="indent1">&lt;div></div>
-    <div class="indent2">
-      &lt;label for="user_email">Email Address:&lt;/label>
-    </div>
-    <div class="indent2">
-      &lt;input type="email" id="user_email" name="email" placeholder="you@example.com">
-    </div>
-    <div class="indent1">&lt;/div></div>
-
-    <br>
-    <div class="indent1">&lt;div></div>
-    <div class="indent2">
-      &lt;label for="user_password">Password:&lt;/label>
-    </div>
-    <div class="indent2">
-      &lt;input type="password" id="user_password" name="password">
-    </div>
-    <div class="indent1">&lt;/div></div>
-
-    <div>
-      &lt;form>
-    </div>   
+  <h4>FORM 表单</h4>
+  <pre><textarea rows="18" class="code" readonly>
+<form action="example.com/path" method="post">
+  <div>
+  <label for="first_name">First Name:</label>
+  <input type="text" name="first_name" id="first_name" placeholder="Bob...">
   </div>
+  <div>
+  <label for="user_email">Email Address:</label>
+  <input type="email" id="user_email" name="email" placeholder="you@example.com">
+  </div>
+  <div>
+  <label for="user_password">Password:</label>
+  <input type="password" id="user_password" name="password">
+  </div>
+<form>
+  </textarea></pre>
 
   <p>action: 告诉表单它应该将其数据发送到哪里进行处理。</p>
   <p>method: 请求方法。常用get，post。</p>
@@ -54,9 +34,42 @@
   <p>name: 输入的变量名。</p>
   <p>type: email-方便输入email。password-显示为*。number-仅接受数字。date-方便日期输入。</p>
 
-  <h4>TEXTAREA文本区</h4>
-  <div class="code">
-    &lt;textarea name="" id="" cols="30" rows="10">&lt;/textarea>
-  </div>
+  <h4>TEXT AREA 文本区</h4>
+  <pre><textarea class="code" readonly>
+<textarea name="" id="" cols="30" rows="5">This is textarea.</textarea>
+  </textarea></pre>
+  <textarea>This is textarea.</textarea>
+  
+  <h4>SELECT EVELMENT 选择元素</h4>
+  <pre><textarea class="code" rows="14" readonly>
+<select name="car-fashion">
+  <option value="mercedes">Mercedes</option>
+  <option value="tesla">Tesla</option>
+  <option value="bmw">BMW</option>
+  <optgroup label="Clothing">
+    <option value="t_shirt">T-Shirts</option>
+    <option value="sweater">Sweaters</option>
+  </optgroup>
+  <optgroup label="Foot Wear">
+    <option value="boots">Boots</option>
+    <option value="sandals">Sandals</option>
+  </optgroup>
+</select>
+  </textarea></pre>
+
+  <select name="car-fashion">
+    <option value="mercedes">Mercedes</option>
+    <option value="tesla">Tesla</option>
+    <option value="bmw">BMW</option>
+    <optgroup label="Clothing">
+      <option value="t_shirt">T-Shirts</option>
+      <option value="sweater">Sweaters</option>
+    </optgroup>
+    <optgroup label="Foot Wear">
+      <option value="boots">Boots</option>
+      <option value="sandals">Sandals</option>
+    </optgroup>
+  </select>
+
 </body>
 </html>
