Correct file name, edit to update notes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <h1>MY STUDY NOTES</h1>
   <ul>
-    <a href="CSS-FORM.html"><li>CSS-FORM</li></a>
+    <a href="HTML-FORM.html"><li>HTML-FORM</li></a>
   </ul>
 </body>
 </html>
