Setup page for CSS-GRID

--- a/Pages/CSS-GRID.html
+++ b/Pages/CSS-GRID.html
@@ -4,14 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>CSS-FORM</title>
+  <link rel="stylesheet" href="../style.css">
+  <title>Document</title>
 </head>
 <body>
-  <h1>MY STUDY NOTES</h1>
-  <ul>
-    <a href="Pages/HTML-FORM.html"><li>HTML-FORM</li></a>
-    <a href="Pages/CSS-GRID.html"><li>CSS-GRID</li></a>
-  </ul>
+  <a href="../index.html"><h1>HOME</h1></a>
+  
 </body>
 </html>
