--- a/Pages/HTML-FORM.html
+++ b/Pages/HTML-FORM.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../style.css">
   <title>HTML-FORM</title>
 </head>
 <body>
-  <a href="index.html"><h1>HOME</h1></a>
+  <a href="../index.html"><h1>HOME</h1></a>
 
   <h2>FORM 表单</h2>
   <textarea rows="18" class="code" readonly>
