--- a/Pages/CSS-GRID.html
+++ b/Pages/CSS-GRID.html
@@ -174,5 +174,173 @@ OR
     <div class="room" id="closet">Closet</div>
   </div>
 
+  <h2>SETUP, REPEAT & FRACTIONAL UNITS</h2>
+  <textarea rows="26" class="code" readonly>
+.grid-container {
+  resize: both;
+  overflow: auto;
+  display: grid;
+  gap: 4px;
+  padding: 4px;
+  border: 1px solid grey;
+  background-color: skyblue;
+  grid-template: 100px 2fr repeat(2, 1fr)/repeat(1, max(150px,50%)) repeat(2, minmax(150px, 200px));
+}
+.grid-container .grid-item {
+  background-color: #444;
+  text-align: center;
+  color: #ddd;
+  font-family: sans-serif;
+  font-size: 1.5rem;
+  padding: 12px;
+}
+.grid-container p {
+  margin: 12px auto 24px;
+}
+.grid-container img {
+  height: 60px;
+}
+  </textarea>
+  <div>Example</div>
+  <div class="grid-container1">
+    <div class="grid-item">
+      <p>Cross 1</p>
+      <img src="../img/cross.png" alt="cross" />
+    </div>
+    <div class="grid-item">
+      <p>Cross 2</p>
+      <img src="../img/cross.png" alt="cross" />
+    </div>
+    <div class="grid-item">
+      <p>Cross 3</p>
+      <img src="../img/cross.png" alt="cross" />
+    </div>
+    <div class="grid-item">
+      <p>Cross 4</p>
+      <img src="../img/cross.png" alt="cross" />
+    </div>
+    <div class="grid-item">
+      <p>Cross 5</p>
+      <img src="../img/cross.png" alt="cross" />
+    </div>
+    <div class="grid-item">
+      <p>Cross 6</p>
+      <img src="../img/cross.png" alt="cross" />
+    </div>
+    <div class="grid-item">
+      <p>Cross 7</p>
+      <img src="../img/cross.png" alt="cross" />
+    </div>
+    <div class="grid-item">
+      <p>Cross 8</p>
+      <img src="../img/cross.png" alt="cross" />
+    </div>
+    <div class="grid-item">
+      <p>Cross 9</p>
+      <img src="../img/cross.png" alt="cross" />
+    </div>
+    <div class="grid-item">
+      <p>Cross 10</p>
+      <img src="../img/cross.png" alt="cross" />
+    </div>
+  </div>
+  <p>resize: both; 这是一个允许用户通过单击并从右下角拖动来调整容器大小的属性。</p>
+  <p>overflow: auto; 如果我们将容器的大小调整为小于我们的网格可以容纳的大小，我们会使用它来启用滚动。</p>
+  <p>fr: 使我们的网格项目动态化的最基本方法是使用分数单位。</p>
+  <p>max(200px,50%):第一列轨道不能超过200px， 或50%容器宽度。</p>
+  <p>minmax():是一个专门用于Grid的CSS函数。只能与这些CSS属性一起使用grid-template-columns，grid-template-rows，grid-auto-columns，grid-auto-rows。</p>
+  <p>minmax(150px, 200px):轨道最小150px，最大200px。</p>
+  <p>clamp(150px, 20%, 200px)：不在示例中。轨道最小150px，最大200px，20%动态。</p>
+
+  <h2>AUTO-FIT & AUTO-FILL</h2>
+  <h4>Auto-fit</h4>
+  <textarea rows="27" class="code" readonly>
+.grid-container2 {
+  resize: both;
+  overflow: auto;
+  display: grid;
+  gap: 4px;
+  padding: 4px;
+  border: 1px solid grey;
+  background-color: skyblue;
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+}
+.grid-item {
+  background-color: #444;
+  text-align: center;
+  color: #ddd;
+  font-family: sans-serif;
+  font-size: 1.5rem;
+  padding: 12px;
+}
+.grid-container2 p {
+  margin: 12px auto 24px;
+}
+.grid-container2 img {
+  height: 60px;
+}
+  </textarea>
+  <div>Example</div>
+  <div class="grid-container2">
+    <div class="grid-item">
+      <p>Cross 1</p>
+      <img src="../img/cross.png" alt="cross" />
+    </div>
+    <div class="grid-item">
+      <p>Cross 2</p>
+      <img src="../img/cross.png" alt="cross" />
+    </div>
+    <div class="grid-item">
+      <p>Cross 3</p>
+      <img src="../img/cross.png" alt="cross" />
+    </div>
+  </div>
+
+  <h4>Auto-fill</h4>
+  <textarea rows="27" class="code" readonly>
+.grid-container3 {
+  resize: both;
+  overflow: auto;
+  display: grid;
+  gap: 4px;
+  padding: 4px;
+  border: 1px solid grey;
+  background-color: skyblue;
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+}
+.grid-item {
+  background-color: #444;
+  text-align: center;
+  color: #ddd;
+  font-family: sans-serif;
+  font-size: 1.5rem;
+  padding: 12px;
+}
+.grid-container3 p {
+  margin: 12px auto 24px;
+}
+.grid-container3 img {
+  height: 60px;
+}
+  </textarea>
+  <div>Example</div>
+  <div class="grid-container3">
+    <div class="grid-item">
+      <p>Cross 1</p>
+      <img src="../img/cross.png" alt="cross" />
+    </div>
+    <div class="grid-item">
+      <p>Cross 2</p>
+      <img src="../img/cross.png" alt="cross" />
+    </div>
+    <div class="grid-item">
+      <p>Cross 3</p>
+      <img src="../img/cross.png" alt="cross" />
+    </div>
+  </div>
+  
+  <textarea rows="27" class="code" readonly></textarea>
 </body>
 </html>
